modified:   assets/database.db 	new file:   libs/gson-2.2.4.jar 	deleted:    res/layout/activity_rule_detail.xml 	modified:   res/layout/activity_rule_form.xml 	modified:   res/values/strings.xml 	modified:   res/values/styles.xml 	modified:   src/br/com/wjaa/smstransfer/activity/HomeActivity.java 	deleted:    src/br/com/wjaa/smstransfer/activity/RuleDetailActivity.java 	modified:   src/br/com/wjaa/smstransfer/activity/RuleFormActivity.java 	modified:   src/br/com/wjaa/smstransfer/activity/adapter/StableArrayAdapter.java 	new file:   src/br/com/wjaa/smstransfer/activity/listener/ButtonDialogClickListener.java 	renamed:    src/br/com/wjaa/smstransfer/activity/adapter/RuleListClickListener.java -> src/br/com/wjaa/smstransfer/activity/listener/RuleListClickListener.java 	new file:   src/br/com/wjaa/smstransfer/callback/DialogCallback.java 	renamed:    src/br/com/wjaa/smstransfer/model/Action.java -> src/br/com/wjaa/smstransfer/model/ActionEntity.java 	new file:   src/br/com/wjaa/smstransfer/model/AppConfig.java 	new file:   src/br/com/wjaa/smstransfer/model/ConfigEntity.java 	renamed:    src/br/com/wjaa/smstransfer/model/Filter.java -> src/br/com/wjaa/smstransfer/model/FilterEntity.java 	renamed:    src/br/com/wjaa/smstransfer/model/Rule.java -> src/br/com/wjaa/smstransfer/model/RuleEntity.java 	renamed:    src/br/com/wjaa/smstransfer/model/RuleFunction.java -> src/br/com/wjaa/smstransfer/model/RuleFunctionEntity.java 	modified:   src/br/com/wjaa/smstransfer/module/FindClassInjectableModule.java 	new file:   src/br/com/wjaa/smstransfer/service/ConfigService.java 	new file:   src/br/com/wjaa/smstransfer/service/ConfigServiceImpl.java 	modified:   src/br/com/wjaa/smstransfer/service/RuleService.java 	modified:   src/br/com/wjaa/smstransfer/service/RuleServiceImpl.java 	modified:   src/br/com/wjaa/smstransfer/utils/AndroidUtils.java 	modified:   src/br/com/wjaa/smstransfer/utils/NumberUtil.java